@@ -2804,16 +2804,21 @@ class Article {
 
 		$wgOut->setPagetitle( $page->getPrefixedText() );
 		$wgOut->setPageTitleActionText( wfMsg( 'info_short' ) );
-		$wgOut->setSubtitle( wfMsg( 'infosubtitle' ));
+		$wgOut->setSubtitle( wfMsg( 'infosubtitle' ) );
 
-		# first, see if the page exists at all.
-		$exists = $page->getArticleId() != 0;
-		if( !$exists ) {
-			if ( $this->mTitle->getNamespace() == NS_MEDIAWIKI ) {
-				$wgOut->addHTML(wfMsgWeirdKey ( $this->mTitle->getText() ) );
+		if( !$this->mTitle->exists() ) {
+			$wgOut->addHtml( '<div class="noarticletext">' );
+			if( $this->mTitle->getNamespace() == NS_MEDIAWIKI ) {
+				// This doesn't quite make sense; the user is asking for
+				// information about the _page_, not the message... -- RC
+				$wgOut->addHtml( htmlspecialchars( wfMsgWeirdKey( $this->mTitle->getText() ) ) );
 			} else {
-				$wgOut->addHTML(wfMsg( $wgUser->isLoggedIn() ? 'noarticletext' : 'noarticletextanon' ) );
+				$msg = $wgUser->isLoggedIn()
+					? 'noarticletext'
+					: 'noarticletextanon';
+				$wgOut->addHtml( wfMsgExt( $msg, 'parse' ) );
 			}
+			$wgOut->addHtml( '</div>' );
 		} else {
 			$dbr = wfGetDB( DB_SLAVE );
 			$wl_clause = array(
